--- a/user/SARS_CoV_2_c100.yaml
+++ b/user/SARS_CoV_2_c100.yaml
@@ -1,7 +1,8 @@
-project_name: sars_dataset_100
+project_name: sars_dataset_100_alt
 fasta_reference: ../user/references/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.fasta
 gb_reference: ../user/references/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gbk
 primers: ../user/primers/sars_cov_2.bed
-folder: 100_coverage
+folder: 100_coverage_alt
 coverage: 100
 gff_reference: ../user/references/SARS_CoV_2_COVID_19_Wuhan_Hu_1_MN908947.gff3
+create_fastq_ref: ../user/alt_ref/SARS_COV_REF_ALT.fasta
